welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:14: error: not found: type YELLOW
setCouleurBrosse(c : YELLOW)
                     ^FlowerPot:14: error: not found: value c
setCouleurBrosse(c : YELLOW)
                 ^FlowerPot:19: error: not found: type YELLOW
setCouleurBrosse(c : YELLOW)
                     ^FlowerPot:19: error: not found: value c
setCouleurBrosse(c : YELLOW)
                 ^